@@ -114,7 +114,7 @@
 	  <td>Stabiel</td>
 	  <td>2.6.4</td>
 	  <td>
-	    <a href="../doc/v2.6/Documentation/out-www/">Documentatie</a>,
+	    <a href="../doc/v2.6/Documentation/">Documentatie</a>,
 	    <a href="install/#2.6">download</a>.
 	  </td>
 	</tr>
