@@ -13,7 +13,7 @@
 
   <li>
     Documentation for
-    <a href="@DOC@v2.6/Documentation/out-www/">
+    <a href="@DOC@v2.6/Documentation/">
       <b><font size="+1">
 	  LilyPond 2.6</font></b>
     </a>
