@@ -131,7 +131,7 @@
 	  <td>Stable</td>
 	  <td>2.6.4</td>
 	  <td>
-	    <a href="../doc/v2.6/Documentation/out-www/">Documentation</a>,
+	    <a href="../doc/v2.6/Documentation/">Documentation</a>,
 	    <a href="install/#2.6">download</a>.
 	  </td>
 	</tr>
