@@ -1,3 +1,13 @@
+2005-11-29  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* site/documentation.html: idem.
+
+	* site/index.html: idem.
+ 
+	* nl/index.html: idem.
+ 
+	* fr/index.html: update 2.6 doc links.
+
 2005-11-28  Jean-Charles Malahieude  <lilyfan@wanadoo.fr>
 
 	* fr/about/*, fr/index.html, fr/documentation.html: corrections
